drivers/acpi/ec.c
@@ -575,6 +575,8 @@ acpi_ec_space_handler(u32 function, acpi_physical_address address,
 	if (bits != 8 && acpi_strict)
 		return AE_BAD_PARAMETER;
 
+	acpi_ec_burst_enable(ec);
+
 	if (function == ACPI_READ) {
 		result = acpi_ec_read(ec, address, &temp);
 		*value = temp;
@@ -593,6 +595,8 @@ acpi_ec_space_handler(u32 function, acpi_physical_address address,
 			result = acpi_ec_write(ec, address, temp);
 		}
 	}
+
+	acpi_ec_burst_disable(ec);
 
 	switch (result) {
 	case -EINVAL:
